# youtube-video-summarizer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  utils.py
data/: processed.json  transcription.json  transcription.txt  translated.json  translated2.json  translated_new.json
llm/: agents.py  translator.py  vector_store.py
transcriptions/: pi9-m8RNqJo.json
translations/: pi9-m8RNqJo.json
