[project]
name = "youtube-video-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "langchain-community>=0.4.1",
    "langchain[google-genai,openai]>=1.1.2",
    "langgraph>=1.0.4",
    "youtube-transcript-api>=1.2.3",
]
